panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_array_of_struct_completed_in_array_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      f~1 `fn() -> void`
      (compound-statement
         (definition xs~4 `array<struct X~3 complete; 4>` ∅)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "%zu %zu\n\0"))))
               (sizeof `unsigned long` 4 `struct X~3 complete`)
               (sizeof `unsigned long` 16 (xs~4 `array<struct X~3 complete; 4>`))))))
   (function-definition external
      g~5 `fn() -> void`
      (compound-statement
         (struct X~7
            (member c @0 `char`)
            (member x @4 `int`))
         (definition xs~8 `array<struct X~7 complete; 8>` ∅)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "%zu %zu\n\0"))))
               (sizeof `unsigned long` 8 `struct X~7 complete`)
               (sizeof `unsigned long` 64 (xs~8 `array<struct X~7 complete; 8>`))))))
   (function-definition external
      main~9 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`))))
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (g~5 `fn() -> void`)))))))

----- stderr -----
