panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_array_of_struct_completed_in_array_decl_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl_2.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl_2.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      f~1 `fn() -> void`
      (compound-statement
         (definition funcs~4 `array<ptr<fn() -> ptr<struct X~3 complete>>; 8>` (braced ∅))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (lengthof `unsigned long` 8 (funcs~4 `array<ptr<fn() -> ptr<struct X~3 complete>>; 8>`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (sizeof `unsigned long` 8
                  (deref `struct X~3 complete`
                     (call `ptr<struct X~3 complete>`
                        (deref `ptr<fn() -> ptr<struct X~3 complete>>`
                           (ptr-add `ptr<ptr<fn() -> ptr<struct X~3 complete>>>`
                              (noop-type-conversion `ptr<ptr<fn() -> ptr<struct X~3 complete>>>`
                                 (addressof `ptr<array<ptr<fn() -> ptr<struct X~3 complete>>; 8>>`
                                    (funcs~4 `array<ptr<fn() -> ptr<struct X~3 complete>>; 8>`)))
                              (sign-extend `long` (0 `int`)))))))))))
   (function-definition external
      g~5 `fn() -> void`
      (compound-statement
         (definition funcs~8 `array<ptr<fn() -> ptr<struct X~7 complete>>; 4>` (braced ∅))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (lengthof `unsigned long` 4 (funcs~8 `array<ptr<fn() -> ptr<struct X~7 complete>>; 4>`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (sizeof `unsigned long` 4
                  (deref `struct X~7 complete`
                     (call `ptr<struct X~7 complete>`
                        (deref `ptr<fn() -> ptr<struct X~7 complete>>`
                           (ptr-add `ptr<ptr<fn() -> ptr<struct X~7 complete>>>`
                              (noop-type-conversion `ptr<ptr<fn() -> ptr<struct X~7 complete>>>`
                                 (addressof `ptr<array<ptr<fn() -> ptr<struct X~7 complete>>; 4>>`
                                    (funcs~8 `array<ptr<fn() -> ptr<struct X~7 complete>>; 4>`)))
                              (sign-extend `long` (0 `int`)))))))))))
   (function-definition external
      main~9 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`))))
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (g~5 `fn() -> void`)))))))

----- stderr -----
