panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_multiple_declarators_of_unnamed_struct_have_same_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_multiple_declarators_of_unnamed_struct_have_same_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_multiple_declarators_of_unnamed_struct_have_same_type.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (struct ∅~2
            (member x @0 `int`))
         (definition p1~3 `ptr<struct ∅~2 complete>` (noop-type-conversion `ptr<struct ∅~2 complete>` (nullptr `nullptr_t`)))
         (definition p2~4 `ptr<struct ∅~2 complete>` (noop-type-conversion `ptr<struct ∅~2 complete>` (nullptr `nullptr_t`)))
         (return (ptr-equal `int` (p1~3 `ptr<struct ∅~2 complete>`) (p2~4 `ptr<struct ∅~2 complete>`))))))

----- stderr -----
